crates/hydracache-db/tests/policy/fail_conflicting_key_sources.rs
use hydracache_db::query_cache_policy;

fn main() {
    let _policy = query_cache_policy!(
        key = "user:1",
        collection = "users",
    );
}
